--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         addEventListener('load', async () => {
-            let sw = await navigator.serviceWorker('./sw.js')
+            let sw = await navigator.serviceWorker.register('./sw.js')
             console.log(sw)
         })
 
