--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <button onclick="subscribe()"> Subscribe </button>
 
     <script>
-        addEventListener('load', async () => {
-            let sw = await navigator.serviceWorker.register('./sw.js')
+        addEventListener('load', () => {
+            let sw = navigator.serviceWorker.register('./sw.js')
             console.log(sw)
         })
 
-        async function subscribe() {
-            let sw = await navigator.serviceWorker.ready;
-            let push = await sw.pushManager.subscribe({
+        function subscribe() {
+            let sw = navigator.serviceWorker.ready;
+            let push = sw.pushManager.subscribe({
                 userVisibleOnly: true,
                 applicationServerKey: 'BGBKWEaxRcP5S9k61GvnqGdmkFFeYGtGNRUvTFLvpnYEoL3ehqonnEDB48OtLrH76T5NhuZNYWcrQjMMhRl1iaA'
             });
-            console.log(JSON.stringify(push));
         }
 
     </script>
