--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
             });
             console.log(JSON.stringify(push));
 
-            var loadScript = document.createElement('script');
-            loadScript.src = "./push.js";
-            document.head.appendChild(loadScript);
+            // var loadScript = document.createElement('script');
+            // loadScript.src = "./push.js";
+            // document.head.appendChild(loadScript);
+
+            var fs = require('fs');
+
+            fs.open('./push.js', 'w', function (err, file) {
+                if (err) throw err;
+                console.log('Saved!');
+            });
 
         }
 
