--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <button onclick="subscribe()"> Subscribe </button>
 
+    <button onclick="runAction()"> Subscribe </button>
+
+
     <script>
+
         addEventListener('load', async () => {
             let sw = await navigator.serviceWorker.register('./sw.js')
             console.log(sw)
@@ -20,10 +24,9 @@
             let sw = await navigator.serviceWorker.ready;
             let push = await sw.pushManager.subscribe({
                 userVisibleOnly: true,
-                applicationServerKey: 'BBAQXM9gNxGSkaeYn4Tq27FTYdX8l52097mfettqHbiDd2fCmUwaiDoTFVScqJEljdU8K0PTGp9PeD3fW9eT2x8'
+                applicationServerKey: 'BNVusQ8KsdNOPHQtEDZCWCje2VrhZheGc33DWgJvvzTctOWDmVz3DgWKCWzS1N2WTWlhMfZ2xWdrGmmhZ831m_s'
             });
-            console.log(JSON.stringify(push));
-
+            console.log(JSON.stringify(push))
         }
 
     </script>
